--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -180,8 +180,13 @@
   </div>
   <%# /商品一覧 %>
 </div>
-<%= link_to(new_item_path, class: 'purchase-btn') do %>
+<div class='purchase-btn'>
   <span class='purchase-btn-text'>出品する</span>
+  <% if user_signed_in?%>
+      <a href="/items/new">
+      <% else %>
+      <a href="/users/sign_in">
+    <% end %>
   <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-<% end %>
+</div>
 <%= render "shared/footer" %>
