--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -24,16 +24,16 @@
       </span>
     </div>
 
-    <% if @item.order == nil %>
+    <% if user_signed_in? && @item.order == nil %>
       <%# ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合 %>
-      <% if user_signed_in? && current_user.id == @item.user_id %>
+      <% if  current_user.id == @item.user_id %>
         <%= link_to '商品の編集', edit_item_path, method: :get, class: "item-red-btn" %>
         <p class='or-text'>or</p>
         <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
       <% end %>
 
       <%# 商品が売れていない場合 %>
-      <% if user_signed_in? && current_user.id != @item.user_id %>
+      <% if current_user.id != @item.user_id %>
         <%= link_to '購入画面に進む', item_orders_path(@item.id), class:"item-red-btn"%>
       <% end %>
     <% end %>
